internal/controllers/testdata/build_collector_http_route.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: test.test
    app.kubernetes.io/managed-by: opentelemetry-operator
    app.kubernetes.io/name: test-collector
    app.kubernetes.io/part-of: opentelemetry
    app.kubernetes.io/version: latest
  name: test-collector
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: opentelemetry-collector
      app.kubernetes.io/instance: test.test
      app.kubernetes.io/managed-by: opentelemetry-operator
      app.kubernetes.io/part-of: opentelemetry
  strategy: {}
  template:
    metadata:
      annotations:
        opentelemetry-operator-config/sha256: f2b5d7e85aee6bedcf5d75e67ff9a0dc4529a9ebfbbb99e84b86e483ba23514b
        prometheus.io/path: /metrics
        prometheus.io/port: "8888"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/component: opentelemetry-collector
        app.kubernetes.io/instance: test.test
        app.kubernetes.io/managed-by: opentelemetry-operator
        app.kubernetes.io/name: test-collector
        app.kubernetes.io/part-of: opentelemetry
        app.kubernetes.io/version: latest
    spec:
      containers:
      - args:
        - --config=/conf/collector.yaml
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: GOMEMLIMIT
          valueFrom:
            resourceFieldRef:
              containerName: otc-container
              divisor: "0"
              resource: limits.memory
        - name: GOMAXPROCS
          valueFrom:
            resourceFieldRef:
              containerName: otc-container
              divisor: "0"
              resource: limits.cpu
        image: test
        name: otc-container
        ports:
        - containerPort: 8888
          name: metrics
          protocol: TCP
        - containerPort: 4317
          name: otlp-grpc
        - containerPort: 4318
          name: otlp-http
        resources: {}
        volumeMounts:
        - mountPath: /conf
          name: otc-internal
      dnsConfig: {}
      dnsPolicy: ClusterFirst
      serviceAccountName: test-collector
      shareProcessNamespace: false
      volumes:
      - configMap:
          items:
          - key: collector.yaml
            path: collector.yaml
          name: test-collector-f2b5d7e8
        name: otc-internal
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  labels:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: test.test
    app.kubernetes.io/managed-by: opentelemetry-operator
    app.kubernetes.io/name: test-collector
    app.kubernetes.io/part-of: opentelemetry
    app.kubernetes.io/version: latest
  name: test-collector
  namespace: test
spec:
  maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: opentelemetry-collector
      app.kubernetes.io/instance: test.test
      app.kubernetes.io/managed-by: opentelemetry-operator
      app.kubernetes.io/part-of: opentelemetry
---
apiVersion: v1
data:
  collector.yaml: |
    receivers:
      otlp:
        protocols:
          grpc: {}
          http: {}
    exporters:
      debug: null
    service:
      pipelines:
        traces:
          exporters:
            - debug
          receivers:
            - otlp
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: test.test
    app.kubernetes.io/managed-by: opentelemetry-operator
    app.kubernetes.io/name: test-collector
    app.kubernetes.io/part-of: opentelemetry
    app.kubernetes.io/version: latest
  name: test-collector-f2b5d7e8
  namespace: test
---
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: test.test
    app.kubernetes.io/managed-by: opentelemetry-operator
    app.kubernetes.io/name: test-collector
    app.kubernetes.io/part-of: opentelemetry
    app.kubernetes.io/version: latest
  name: test-collector
  namespace: test
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: test.test
    app.kubernetes.io/managed-by: opentelemetry-operator
    app.kubernetes.io/name: test-collector
    app.kubernetes.io/part-of: opentelemetry
    app.kubernetes.io/version: latest
    operator.opentelemetry.io/collector-service-type: base
  name: test-collector
  namespace: test
spec:
  internalTrafficPolicy: Cluster
  ports:
  - appProtocol: grpc
    name: otlp-grpc
    port: 4317
    targetPort: 4317
  - appProtocol: http
    name: otlp-http
    port: 4318
    targetPort: 4318
  selector:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: test.test
    app.kubernetes.io/managed-by: opentelemetry-operator
    app.kubernetes.io/part-of: opentelemetry
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: test-collector-headless-tls
  labels:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: test.test
    app.kubernetes.io/managed-by: opentelemetry-operator
    app.kubernetes.io/name: test-collector
    app.kubernetes.io/part-of: opentelemetry
    app.kubernetes.io/version: latest
    operator.opentelemetry.io/collector-headless-service: Exists
    operator.opentelemetry.io/collector-service-type: headless
  name: test-collector-headless
  namespace: test
spec:
  clusterIP: None
  internalTrafficPolicy: Cluster
  ports:
  - appProtocol: grpc
    name: otlp-grpc
    port: 4317
    targetPort: 4317
  - appProtocol: http
    name: otlp-http
    port: 4318
    targetPort: 4318
  selector:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: test.test
    app.kubernetes.io/managed-by: opentelemetry-operator
    app.kubernetes.io/part-of: opentelemetry
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: test.test
    app.kubernetes.io/managed-by: opentelemetry-operator
    app.kubernetes.io/name: test-collector-monitoring
    app.kubernetes.io/part-of: opentelemetry
    app.kubernetes.io/version: latest
    operator.opentelemetry.io/collector-monitoring-service: Exists
    operator.opentelemetry.io/collector-service-type: monitoring
  name: test-collector-monitoring
  namespace: test
spec:
  ports:
  - name: monitoring
    port: 8888
    targetPort: 0
  selector:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: test.test
    app.kubernetes.io/managed-by: opentelemetry-operator
    app.kubernetes.io/part-of: opentelemetry
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: test.test
    app.kubernetes.io/managed-by: opentelemetry-operator
    app.kubernetes.io/name: test-otlp-http-httproute
    app.kubernetes.io/part-of: opentelemetry
    app.kubernetes.io/version: latest
  name: test-otlp-http-httproute
  namespace: test
spec:
  hostnames:
  - example.com
  - '*.example.com'
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: my-gateway
    namespace: default
  rules:
  - backendRefs:
    - name: test-collector
      port: 4318
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replacePrefixMatch: /
          type: ReplacePrefixMatch
    matches:
    - path:
        type: PathPrefix
        value: /otlp-http
